Prevent composer name from line wrapping.

--- a/_includes/styles/comlib.css
+++ b/_includes/styles/comlib.css
@@ -114,5 +114,6 @@
 #composer-name {
 	font-size: 1.3rem;
 	color: black;
+	white-space: nowrap;
 }
 
